# wha-spell-simulator

./: .env.example  .eslintrc.json  .gitignore  ASANA_INTEGRATION_CHECKLIST.md  NWW_ASANA_INTEGRATION_GUIDE.md  README.md  STATUS.md  code-security.datadog.yaml  index.html  package-lock.json  package.json  requirements-tools.txt  skills-lock.json
.cursor/: hooks.json
.devcontainer/: devcontainer.json
asana_connector/: README.md  __init__.py  bootstrap.py  client.py  config.py  data_mapper.py  portfolio_manager.py  schemas.py
assets/: glyphOverlayRenderer-BtRQscOK.js  index-Coocdlgs.js  index-D08kw2Gn.js  index-DA__hDbz.js  sigilSignDetectorLab-V0OTPKqp.js  spellEffectLab-C-xX6u7a.js  spellEffectRenderer-To5ev08W.js  strokeTemplateMaker-DIis5NmD.js  symbolRecognizer-CJ42TBhN.js
cpp/: CMakeLists.txt  README.md
cpp/include/eden/: ingest_policy.hpp
cpp/tests/: eden_ingest_tests.cpp
docs/: API.md  ARCHITECTURE.md  ASANA_BOOTSTRAP.md  CI-CD.md  CONTRIBUTING.md  Q24_INGESTION_REVIEW.md  asana-connector.md  chronology-recursive-bridge.md  comet-extension-workspace.md  comfyui-elevenlabs-garden.md  fable5-comfyui-adapter.md  mcp-router-policy.md  mesh-review-loop.md  shadow-jing-garden-federation.md  stripe-integration-plan.md  technical-scene-catalyst.md
eden/: README.md  comfyuiAdapter.mjs  eden_spell.mjs  fable5.mjs
eden_shadow/: README.md  __init__.py  __main__.py  game.py
q24/: README.md  q24_symbolic_registry.json
shadow_garden_handoff/: GATE_8_REALITY_CLOSE.md  TIMELINE_20_AUTO_HANDOFF.md  claude_validation_inbox.json
src/: config.js  main.js
(+220 files in other folders)
